--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,16 +5,23 @@ phases:
     runtime-versions:
       nodejs: 18
     commands:
+      - echo "Installing dependencies..."
       - npm install
 
   build:
     commands:
+      - echo "Building the application..."
       - npm run build
 
   post_build:
     commands:
-      - echo "Build completed on `date`"
-      - cp -r scripts/ build/
+      - echo "Build completed on $(date)"
+      - |
+        if [ -d scripts ]; then
+          cp -r scripts/ build/
+        else
+          echo "Warning: scripts/ directory not found, skipping copy."
+        fi
 
 artifacts:
   files:
