--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,8 @@ phases:
 
   build:
     commands:
-      - echo "Building the application..."
+      - echo "Starting build with verbose output..."
+      - set -x
       - npm run build
 
   post_build:
