--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,23 +3,21 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 18
+      nodejs: 14
     commands:
-      - echo "Installing dependencies..."
       - npm install
 
   build:
     commands:
-      - echo "Starting build process..."
-      - set -x
       - npm run build
 
   post_build:
     commands:
-      - echo "Build completed on $(date)"
-      - echo "Artifacts copied from /build"
+      - echo "Build completed on `date`"
+      - echo "Artifacts copied from /build and /scripts"
 
 artifacts:
-  base-directory: build
   files:
     - '**/*'
+    - ../scripts/**
+  base-directory: build
